--- a/journal/202303.md
+++ b/journal/202303.md
@@ -162,7 +162,37 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 }
 
-- {}
+Client:
+
+- Removed [default Bitcoin peer](https://github.com/decred/dcrdex/pull/2193) for getting compact block filters in SPV mode. It was added when there were few public Bitcoin full nodes supporting BIP-157. Now there are plenty and removing the default one may improve connectivity because it is often overloaded.
+- Improved error message when database [failed to initialize](https://github.com/decred/dcrdex/pull/2205), most commonly when attempting to start a second instance of dexc.
+- Fixed displayed status of [canceled orders](https://github.com/decred/dcrdex/pull/2180) { _may group_ }
+- Fixed empty [gaps between candles](https://github.com/decred/dcrdex/pull/2195) on the price chart.
+- Fixed token's [parent asset balance](https://github.com/decred/dcrdex/pull/2201) not being updated when cancelling an order involving that token.
+- Fixed inconsistent decimal [precision](https://github.com/decred/dcrdex/pull/2208) on different UI elements.
+- Fixed [price](https://github.com/decred/dcrdex/pull/2214) not being updated in some places.
+- Fixed repeated [icon fetching](https://github.com/decred/dcrdex/pull/2217) on the Markets page.
+- Fixed reorg indication for [DCR](https://github.com/decred/dcrdex/pull/2219) and [BTC](https://github.com/decred/dcrdex/pull/2225) in SPV mode to match dcrd and dcrwallet. Specifically, blocks that are not on the main chain ("orphaned" blocks) will be reported as having "-1" confirmations.
+- Fixed concurrency bugs { 2189 }
+- Fixed logging { 2194 }
+
+Ethereum, client:
+
+- Improved handling of poor connections to RPC providers when [shutting down](https://github.com/decred/dcrdex/pull/2191) DEX client.
+
+Ethereum, server:
+
+- Allow server operators to rank RPC endpoints by [priority](https://github.com/decred/dcrdex/pull/2199). The healthy connection with the highest priority will always be attempted first.
+
+Fidelity bonds:
+
+- Fixed [logging](https://github.com/decred/dcrdex/pull/2220) of registration fees config where bonds config was expected. { _group_ }
+- Fixed "bond required" alert [not disappearing](https://github.com/decred/dcrdex/pull/2221) after bond was confirmed.
+
+Other changes:
+
+- Test infra improvements { 2204 }
+- Added [Windows tray](https://github.com/decred/dcrdex/commit/3a216ce3f750fa5e2f270a26d998d674024eb1f1) build to build script. { _may group_ }
 
 Umbrel app store integration: {
 
