--- a/journal/202303.md
+++ b/journal/202303.md
@@ -158,27 +158,39 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 { _Check these repos:_
 
 - https://github.com/decred/dcrdex/commits/master
+- PRs for `release-v0.6` branch
 - https://github.com/decred/dexweb/commits/master
 
 }
 
-Client:
+Changes below will be included in the v0.6 release.
 
-- Removed [default Bitcoin peer](https://github.com/decred/dcrdex/pull/2193) for getting compact block filters in SPV mode. It was added when there were few public Bitcoin full nodes supporting BIP-157. Now there are plenty and removing the default one may improve connectivity because it is often overloaded.
+Client changes:
+
+- Removed [default Bitcoin node](https://github.com/decred/dcrdex/pull/2193) for getting compact block filters in SPV mode. It was added when there were few public Bitcoin full nodes supporting BIP-157. Now there are plenty and removing the default one may improve connectivity because it is often overloaded.
 - Improved error message when database [failed to initialize](https://github.com/decred/dcrdex/pull/2205), most commonly when attempting to start a second instance of dexc.
+
+Client fixes:
+
 - Fixed displayed status of [canceled orders](https://github.com/decred/dcrdex/pull/2180) { _may group_ }
 - Fixed empty [gaps between candles](https://github.com/decred/dcrdex/pull/2195) on the price chart.
-- Fixed token's [parent asset balance](https://github.com/decred/dcrdex/pull/2201) not being updated when cancelling an order involving that token.
 - Fixed inconsistent decimal [precision](https://github.com/decred/dcrdex/pull/2208) on different UI elements.
 - Fixed [price](https://github.com/decred/dcrdex/pull/2214) not being updated in some places.
 - Fixed repeated [icon fetching](https://github.com/decred/dcrdex/pull/2217) on the Markets page.
 - Fixed reorg indication for [DCR](https://github.com/decred/dcrdex/pull/2219) and [BTC](https://github.com/decred/dcrdex/pull/2225) in SPV mode to match dcrd and dcrwallet. Specifically, blocks that are not on the main chain ("orphaned" blocks) will be reported as having "-1" confirmations.
+- Fixed [wallet birthday](https://github.com/decred/dcrdex/pull/2236) showing UTC date instead of local date.
 - Fixed concurrency bugs { 2189 }
 - Fixed logging { 2194 }
 
 Ethereum, client:
 
 - Improved handling of poor connections to RPC providers when [shutting down](https://github.com/decred/dcrdex/pull/2191) DEX client.
+- Added [Ethereum wallet guide](https://github.com/decred/dcrdex/pull/2233) wiki page.
+- Added a 20% buffer to the [fee estimate](https://github.com/decred/dcrdex/pull/2234) when sending ETH to ensure it will succeed even if network's base fee jumps right before sending.
+- Improved error message when [failing to connect](https://github.com/decred/dcrdex/pull/2244) to RPC providers. { _group_ }
+- Updated to [Geth v1.11](https://github.com/decred/dcrdex/pull/2238). This was a required update for the Shanghai network upgrade scheduled on April 12, 2023.
+- Fixed token's [parent asset balance](https://github.com/decred/dcrdex/pull/2201) not being updated when cancelling an order involving that token.
+- Fixed [unconfirmed transactions](https://github.com/decred/dcrdex/pull/2211) not being considered in the reported available balance. { _second fix in 2247_ }
 
 Ethereum, server:
 
@@ -186,13 +198,22 @@ Ethereum, server:
 
 Fidelity bonds:
 
+- [UI updates](https://github.com/decred/dcrdex/pull/2200) to replace registration fees with bonds, including integration of bonds into account import and export flows. Different cases are considered when restoring from same or new app seed, and when using existing or creating new DEX account.
 - Fixed [logging](https://github.com/decred/dcrdex/pull/2220) of registration fees config where bonds config was expected. { _group_ }
 - Fixed "bond required" alert [not disappearing](https://github.com/decred/dcrdex/pull/2221) after bond was confirmed.
 
 Other changes:
 
-- Test infra improvements { 2204 }
 - Added [Windows tray](https://github.com/decred/dcrdex/commit/3a216ce3f750fa5e2f270a26d998d674024eb1f1) build to build script. { _may group_ }
+- Added more strict server-side [checks](https://github.com/decred/dcrdex/pull/2248) for addresses used in swaps.
+- Test infra improvements { 2204 }
+- Dependency updates { 2232 }
+
+Client changes on `master` towards the next release (likely v0.6.1):
+
+- Notify the user about [unstable connection](https://github.com/decred/dcrdex/pull/2028). { _follow-up fix in 2235_ }
+- Log HTTP requests to app's [standard logger](https://github.com/decred/dcrdex/pull/2206). This disables log coloring but fixes timezone discrepancy on some systems. { _may group_ }
+- Fixed error when [failing to subscribe](https://github.com/decred/dcrdex/pull/2252) to new header notifications from Ethereum RPC provider.
 
 Umbrel app store integration: {
 
@@ -202,6 +223,8 @@ Umbrel app store integration: {
   - link tweet claiming neutrality
 
 }
+
+{ image candidates: maybe https://github.com/decred/dcrdex/pull/2200#issuecomment-1470833190 - but say it is WIP }
 
 
 ### dcrdata
