--- a/journal/202303.md
+++ b/journal/202303.md
@@ -43,6 +43,13 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 { _Add individual sections for high-impact announcements, such as consensus votes, software releases, milestones, major bugs, etc._ }
 
 
+## Bison Relay v0.1.5 { v0.1.6? } Release
+
+{ highlights, links }
+
+{ cover both v0.1.5 and v0.1.6 if the latter is out in Mar }
+
+
 ## Development
 
 The work reported below has the "merged to master" status unless noted otherwise. It means that the work is completed, reviewed, and integrated into the source code that advanced users can [build and run](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c), but is not yet available in release binaries for regular users.
@@ -306,6 +313,33 @@ _[Bison Relay](https://github.com/companyzero/bisonrelay) is a new social media 
 - https://github.com/companyzero/sntrup4591761
 
 }
+
+v0.1.5 was released in { early March? }. A detailed list of changes can be found in the [February issue](202302.md#bison-relay).
+
+Below are the changes included in the v0.1.6 release.
+
+Common changes in GUI and CLI apps in v0.1.6:
+
+- Improved error handling and logging of [failed payments](https://github.com/companyzero/bisonrelay/pull/156) (such as tipping).
+- Fixed bug preventing to accept [multiple group chat invites](https://github.com/companyzero/bisonrelay/pull/154) at the same time.
+
+GUI app changes in v0.1.6:
+
+- Added sidebar notification icon for [new chat messages](https://github.com/companyzero/bisonrelay/pull/157).
+- Show [unread count](https://github.com/companyzero/bisonrelay/pull/157) as "1k+" when it is over 1,000.
+- Avoid redundant [last read](https://github.com/companyzero/bisonrelay/pull/157) indicator when there are no previous messages in the chat.
+- Added a prominent [New Post](https://github.com/companyzero/bisonrelay/pull/159) button that is easy to access from different views.
+- UI alignment tweaks { 157 }
+- Fixed segfault error [on close](https://github.com/companyzero/bisonrelay/pull/157).
+
+CLI app changes in v0.1.6:
+
+- Added [autocompletion](https://github.com/companyzero/bisonrelay/pull/163) to various commands involving user names and group chat names.
+
+`clientrpc` automation API changes in v0.1.6:
+
+- Improved [cancellation and shutdown](https://github.com/companyzero/bisonrelay/issues/158) handling of the read loop.
+
 
 
 ### Other
