--- a/journal/202303.md
+++ b/journal/202303.md
@@ -231,6 +231,10 @@ Umbrel app store integration: {
 
 }
 
+Other:
+
+- DigiByte first swaps on mainnet https://twitter.com/DigiByteCoin/status/1640820963532214273
+
 { image candidates: maybe https://github.com/decred/dcrdex/pull/2200#issuecomment-1470833190 - but say it is WIP }
 
 
@@ -321,7 +325,11 @@ Below are the changes included in the v0.1.6 release.
 Common changes in GUI and CLI apps in v0.1.6:
 
 - Improved error handling and logging of [failed payments](https://github.com/companyzero/bisonrelay/pull/156) (such as tipping).
+- Introduced [new version of group chats](https://github.com/companyzero/bisonrelay/pull/155) supporting multiple admins. Admins can invite or remove members, and assign or revoke admin privileges. Only the owner can kill the group chat. Existing group chats will have an option to upgrade to new version.
+- Improved help text for [adding receive capacity](https://github.com/companyzero/bisonrelay/pull/166).
+- Block comments in [relayed posts](https://github.com/companyzero/bisonrelay/pull/162). Commenting on posts will require a key exchange with the original author.
 - Fixed bug preventing to accept [multiple group chat invites](https://github.com/companyzero/bisonrelay/pull/154) at the same time.
+- Dependency updates { 165 171 175 }
 
 GUI app changes in v0.1.6:
 
@@ -329,17 +337,32 @@ GUI app changes in v0.1.6:
 - Show [unread count](https://github.com/companyzero/bisonrelay/pull/157) as "1k+" when it is over 1,000.
 - Avoid redundant [last read](https://github.com/companyzero/bisonrelay/pull/157) indicator when there are no previous messages in the chat.
 - Added a prominent [New Post](https://github.com/companyzero/bisonrelay/pull/159) button that is easy to access from different views.
+- Added [highlighting of messages](https://github.com/companyzero/bisonrelay/pull/164) that include user's nick.
+- Added [seed verification step](https://github.com/companyzero/bisonrelay/pull/174) where user is required to answer questions about their seed.
+- Allow to copy LN node [pubkey and channel points](https://github.com/companyzero/bisonrelay/pull/167) to clipboard. { _may group_ }
+- Added [About page](https://github.com/companyzero/bisonrelay/pull/175) with app version and copyright info.
 - UI alignment tweaks { 157 }
 - Fixed segfault error [on close](https://github.com/companyzero/bisonrelay/pull/157).
+- Fixed errors when [leaving or killing](https://github.com/companyzero/bisonrelay/pull/170) group chats. { _group_ }
 
 CLI app changes in v0.1.6:
 
 - Added [autocompletion](https://github.com/companyzero/bisonrelay/pull/163) to various commands involving user names and group chat names.
+- Added [Alt+V](https://github.com/companyzero/bisonrelay/pull/153) as a Paste hotkey.
+- Added a command to decode and inspect [LN invoices](https://github.com/companyzero/bisonrelay/pull/166), improved logging of LN events (such as channel opened or closed).
+- Display invite to group chat in a [private chat](https://github.com/companyzero/bisonrelay/pull/169) with the inviting user.
+- Added an option to include a [group chat invite](https://github.com/companyzero/bisonrelay/pull/178) in an invite file. Invite recipient will be invited to group chat automatically after completing the initial key exchange with invite author.
+- Fixed [wrapping](https://github.com/companyzero/bisonrelay/pull/153) of multi-line text.
 
 `clientrpc` automation API changes in v0.1.6:
 
 - Improved [cancellation and shutdown](https://github.com/companyzero/bisonrelay/issues/158) handling of the read loop.
+- Added methods for [managing group chats](https://github.com/companyzero/bisonrelay/pull/161) and [sending files](https://github.com/companyzero/bisonrelay/pull/179).
+- Fixed [reading](https://github.com/companyzero/bisonrelay/pull/161) from the message replay log file.
 
+Up next:
+
+- Prepaid invites https://twitter.com/behindtext/status/1641080004778897408
 
 
 ### Other
