--- a/journal/202303.md
+++ b/journal/202303.md
@@ -413,7 +413,7 @@ Community stats as of {date} (compared to {date}):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In March the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at March's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at March's rate.
+In March the new [treasury](https://dcrdata.decred.org/treasury) received 8,388 DCR worth ${} at March's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at March's rate.
 
 The [treasury spend tx]({}) had {} outputs making payments to contractors, ranging from {} DCR to {} DCR.
 
@@ -425,11 +425,16 @@ As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dc
 
 { _High-level recap of decision-making activity and most important events._ }
 
-- {}
+There were 7 proposals submitted in March
+
+- The Decred Journal and Politeia Digest [proposal](https://proposals.decred.org/record/9e68dca) requested a budget of $40,000 and was approved with 86% Yes votes and turnout of 46%. 
+- There were 3 proposals from the Decred DEX team which were all approved. The main [proposal](https://proposals.decred.org/record/ca6b749) for client development asked for a budget of $182,000 and was approved with 94% Yes votes and 49% turnout. A [proposal](https://proposals.decred.org/record/ae7c4fe) to fund work on packaging the DEX software as a desktop app was funded with a budget of $29,000, 91% approval from 43% turnout. A [proposal](https://proposals.decred.org/record/8b1ceda) to fund development of a market maker and arbitrage bot was funded with a budget of $73,000, gaining 89% approval from the 42% of tickets that voted.
+- A [proposal](https://proposals.decred.org/record/ff64137) from Cointelegraph for $50,000 worth of content was rejected with 41% Yes votes from turnout of 51%.
+- {2 other proposals}
 
 { _Check https://github.com/decredcommunity/proposals/commits/master for updates._ }
 
-See Politeia Digest [issue {}]({}) for more details on the month's proposals.
+See Politeia Digest [issue 57](https://blockcommons.red/politeia-digest/issue057/) and [58](https://blockcommons.red/politeia-digest/issue058/) for more details on the month's proposals.
 
 
 ## Network
