Dev dcrd 1, highlights

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -12,11 +12,11 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 { _Month's highlights, no links here, 5-7 bullets max._
 
-- 
+- Bison Relay v0.1.X
 
-- 
+- DCRDEX 0.6 beta testing and release candidates
 
-- 
+- proposals
 
 - 
 
@@ -70,7 +70,11 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 
 { _Check_ https://github.com/decred/dcrd/commits/master }
 
-- {}
+- Enhanced startup [validation](https://github.com/decred/dcrd/pull/3068) of deployment parameters to ensure they satisfy the assumptions that the vote tallying logic rely on. For example, it checks that each vote has exactly one Abstain and one No choice, that there are no duplicate vote choices, or that choices are properly encoded in bits. This may unlock future optimizations and simplifications of code related to vote tallying. { _curious how extra validation allows to optimize and simplify vote tallying_ }
+- Reworked code determining consensus [vote stage and vote tallying](https://github.com/decred/dcrd/pull/3069) logic to optimize it and make it easier to reason about.
+- Re-request blocks and transactions [sooner](https://github.com/decred/dcrd/pull/3067) if the peer which was queried for them disconnects. Instead of waiting for this data to be announced again later, it will be requested immediately from peers that are known to have it.
+- Fixed caching of other peers' [known inventory](https://github.com/decred/dcrd/pull/3074). { _was it a bug? did it affect any release? in what ways?_ }
+- Refactoring { 3071 3072 }
 
 
 ### dcrwallet
@@ -152,6 +156,7 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 - https://github.com/decred/dcrdex/commits/master
 - PRs for `release-v0.6` branch
 - https://github.com/decred/dexweb/commits/master
+- beta and RC https://github.com/decred/dcrdex/tags
 
 }
 
