--- a/journal/202303.md
+++ b/journal/202303.md
@@ -70,11 +70,21 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 
 { _Check_ https://github.com/decred/dcrd/commits/master }
 
+Hardening of consensus change voting code continued from [last month](202302.md#dcrd):
+
 - Enhanced startup [validation](https://github.com/decred/dcrd/pull/3068) of deployment parameters to ensure they satisfy the assumptions that the vote tallying logic rely on. For example, it checks that each vote has exactly one Abstain and one No choice, that there are no duplicate vote choices, or that choices are properly encoded in bits. This may unlock future optimizations and simplifications of code related to vote tallying. { _curious how extra validation allows to optimize and simplify vote tallying_ }
+- Added validation to ensure consensus change vote parameters [don't use special bits](https://github.com/decred/dcrd/pull/3073) reserved for approving or disapproving the previous block.
+- Added validation to ensure that bits used by different votes in the same voting batch [do not overlap](https://github.com/decred/dcrd/pull/3077).
+- Added validation rejecting vote choices with [empty IDs](https://github.com/decred/dcrd/pull/3079) (IDs are short strings summarizing what the vote choice means, they are normally `"yes"`, `"no"` or `"abstain"`).
 - Reworked code determining consensus [vote stage and vote tallying](https://github.com/decred/dcrd/pull/3069) logic to optimize it and make it easier to reason about.
+- Changed how winning consensus vote choice is represented for improved readability and additional protections from [misusing](https://github.com/decred/dcrd/pull/3080) this code.
+- Reworked tests for [consensus vote processing](https://github.com/decred/dcrd/pull/3075) code to make them easier to understand, test more edge cases, and do so [more reliably](https://github.com/decred/dcrd/pull/3076).
+
+Other changes:
+
 - Re-request blocks and transactions [sooner](https://github.com/decred/dcrd/pull/3067) if the peer which was queried for them disconnects. Instead of waiting for this data to be announced again later, it will be requested immediately from peers that are known to have it.
-- Fixed caching of other peers' [known inventory](https://github.com/decred/dcrd/pull/3074). { _was it a bug? did it affect any release? in what ways?_ }
-- Refactoring { 3071 3072 }
+- Fixed caching of other peers' [known inventory](https://github.com/decred/dcrd/pull/3074). { _was it a bug? what did it cause? did it affect any release?_ }
+- Refactoring { 3071 3072 } and [build config](https://github.com/decred/dcrd/pull/3081) updates.
 
 
 ### dcrwallet
