Dev DEX March scan complete

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -161,16 +161,7 @@ _[cspp](https://github.com/decred/cspp) is a server for coordinating coin mixes 
 
 _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecting exchange for trustless trading, powered by atomic swaps._
 
-{ _Check these repos:_
-
-- https://github.com/decred/dcrdex/commits/master
-- PRs for `release-v0.6` branch
-- https://github.com/decred/dexweb/commits/master
-- beta and RC https://github.com/decred/dcrdex/tags
-
-}
-
-Changes below will be included in the v0.6 release.
+Internal pre-release testing of the major v0.6 release has started with a beta and two release candidates [tagged](https://github.com/decred/dcrdex/tags) in March. All changes reported below will be included in the v0.6 release.
 
 Client changes:
 
@@ -186,8 +177,11 @@ Client fixes:
 - Fixed repeated [icon fetching](https://github.com/decred/dcrdex/pull/2217) on the Markets page.
 - Fixed reorg indication for [DCR](https://github.com/decred/dcrdex/pull/2219) and [BTC](https://github.com/decred/dcrdex/pull/2225) in SPV mode to match dcrd and dcrwallet. Specifically, blocks that are not on the main chain ("orphaned" blocks) will be reported as having "-1" confirmations.
 - Fixed [wallet birthday](https://github.com/decred/dcrdex/pull/2236) showing UTC date instead of local date.
+- Fixed [cancel orders](https://github.com/decred/dcrdex/pull/2262) showing up in the order book. { _may group_ }
+- Fixed a chance to get [negative amount](https://github.com/decred/dcrdex/pull/2253) on Send form when the tx fee is comparable to amount left in the wallet. { _may group_ }
+- Fixed switching of [asset icons](https://github.com/decred/dcrdex/pull/2265). { _group_ }
 - Fixed concurrency bugs { 2189 }
-- Fixed logging { 2194 }
+- Fixed logging { 2194 2272 }
 
 Ethereum, client:
 
@@ -198,6 +192,7 @@ Ethereum, client:
 - Updated to [Geth v1.11](https://github.com/decred/dcrdex/pull/2238). This was a required update for the Shanghai network upgrade scheduled on April 12, 2023.
 - Fixed token's [parent asset balance](https://github.com/decred/dcrdex/pull/2201) not being updated when cancelling an order involving that token.
 - Fixed [unconfirmed transactions](https://github.com/decred/dcrdex/pull/2211) not being considered in the reported available balance. { _second fix in 2247_ }
+- Fixed display of [provider domain](https://github.com/decred/dcrdex/pull/2273) when there is an error. { _group_ }
 
 Ethereum, server:
 
@@ -206,13 +201,16 @@ Ethereum, server:
 Fidelity bonds:
 
 - [UI updates](https://github.com/decred/dcrdex/pull/2200) to replace registration fees with bonds, including integration of bonds into account import and export flows. Different cases are considered when restoring from same or new app seed, and when using existing or creating new DEX account.
+- Implemented bonds funded [with BTC](https://github.com/decred/dcrdex/pull/2196) in both the client and the server. It will be possible to switch bonds to use a different asset, e.g. from DCR to BTC.
 - Fixed [logging](https://github.com/decred/dcrdex/pull/2220) of registration fees config where bonds config was expected. { _group_ }
 - Fixed "bond required" alert [not disappearing](https://github.com/decred/dcrdex/pull/2221) after bond was confirmed.
+- Fixed missed population of the ["Other"](https://github.com/decred/dcrdex/pull/2274) balance category for BTC ("Other" includes balances related to bonds). { _group_ }
 
 Other changes:
 
 - Added [Windows tray](https://github.com/decred/dcrdex/commit/3a216ce3f750fa5e2f270a26d998d674024eb1f1) build to build script. { _may group_ }
 - Added more strict server-side [checks](https://github.com/decred/dcrdex/pull/2248) for addresses used in swaps.
+- Updated LTC dependencies to pull in a [critical fix](https://github.com/ltcsuite/ltcd/pull/25) for handling large transactions.
 - Test infra improvements { 2204 }
 - Dependency updates { 2232 }
 
