Dev BR March scan complete

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -12,11 +12,11 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 { _Month's highlights, no links here, 5-7 bullets max._
 
-- Bison Relay v0.1.X
+- Bison Relay v0.1.6 RC1
 
 - DCRDEX 0.6 beta testing and release candidates
 
-- proposals
+- Proposal activity
 
 - 
 
@@ -43,11 +43,16 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 { _Add individual sections for high-impact announcements, such as consensus votes, software releases, milestones, major bugs, etc._ }
 
 
-## Bison Relay v0.1.5 { v0.1.6? } Release
+## Proposal to change PoW algorithm to BLAKE3 and PoW/PoS split to 1/89
+
+{ it's big so we ann it here briefly }
+
+
+## Bison Relay v0.1.6 Release Candidate
 
 { highlights, links }
 
-{ cover both v0.1.5 and v0.1.6 if the latter is out in Mar }
+{ cover both v0.1.5 and v0.1.6 rc1 }
 
 
 ## Development
@@ -308,17 +313,7 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.o
 
 _[Bison Relay](https://github.com/companyzero/bisonrelay) is a new social media platform with strong protections against censorship, surveillance, and advertising, powered by Decred Lightning Network._
 
-{ _Check these repos:_
-
-- https://github.com/companyzero/bisonrelay
-- https://github.com/companyzero/bisonrelay-web
-- https://github.com/companyzero/sntrup4591761
-
-}
-
-v0.1.5 was released in { early March? }. A detailed list of changes can be found in the [February issue](202302.md#bison-relay).
-
-Below are the changes included in the v0.1.6 release.
+End user binaries have been released for Bison Relay v0.1.5 with all changes and fixes we reported in the [February issue](202302.md#bison-relay). Just one week later v0.1.6 Release Candidate 1 became available for download. Below are all changes in v0.1.6 RC1 and v0.1.6 final. The latter added very minor fixes and no binaries have been made for it.
 
 Common changes in GUI and CLI apps in v0.1.6:
 
@@ -328,6 +323,7 @@ Common changes in GUI and CLI apps in v0.1.6:
 - Disallow comments in [relayed posts](https://github.com/companyzero/bisonrelay/pull/162). Commenting on posts will require a key exchange with the original author. Also, once the original post is received from the author, all relayed copies will be removed.
 - Fixed bug preventing to accept [multiple group chat invites](https://github.com/companyzero/bisonrelay/pull/154) at the same time.
 - Dependency updates { 165 171 175 180 }
+- Internal refactoring { 188 }
 
 GUI app changes in v0.1.6:
 
@@ -342,6 +338,7 @@ GUI app changes in v0.1.6:
 - UI alignment tweaks { 157 }
 - Fixed segfault error [on close](https://github.com/companyzero/bisonrelay/pull/157).
 - Fixed errors when [leaving or killing](https://github.com/companyzero/bisonrelay/pull/170) group chats. { _group_ }
+- Fixed attempt to create a leter-based avatar when [nickname is empty](https://github.com/companyzero/bisonrelay/pull/183). { _group_ }
 
 CLI app changes in v0.1.6:
 
@@ -358,9 +355,14 @@ CLI app changes in v0.1.6:
 - Added methods for [managing group chats](https://github.com/companyzero/bisonrelay/pull/161) and [sending files](https://github.com/companyzero/bisonrelay/pull/179).
 - Fixed [reading](https://github.com/companyzero/bisonrelay/pull/161) from the message replay log file.
 
-Up next:
+Other changes in v0.1.6:
 
-- Prepaid invites https://twitter.com/behindtext/status/1641080004778897408
+- Test improvements { 189 }
+
+Other stuff:
+
+- Image attachments are now delivered from Bison Relay to Matrix { and the other way round? }
+- Prepaid invites are coming soon https://twitter.com/behindtext/status/1641080004778897408
 
 
 ### Other
