--- a/journal/202303.md
+++ b/journal/202303.md
@@ -140,7 +140,7 @@ _[dcrpool](https://github.com/decred/dcrpool) is server software for running a m
 
 { _Check_ https://github.com/decred/dcrpool/commits/master }
 
-- {}
+- Updated to [Go 1.18](https://github.com/decred/dcrpool/pull/338).
 
 
 ### Lightning Network
