--- a/journal/202303.md
+++ b/journal/202303.md
@@ -152,7 +152,7 @@ _[cspp](https://github.com/decred/cspp) is a server for coordinating coin mixes 
 
 { _Check_ https://github.com/decred/cspp/commits/master }
 
-- {}
+- Updated to the latest [golang.org Modules](https://github.com/decred/cspp/pull/89).
 
 
 ### DCRDEX
