add timestamply note

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -262,6 +262,7 @@ _[Timestamply](https://github.com/decred/dcrtimegui) is a free service for times
 
 - { if anything new: https://proposals.decred.org/record/855a506/comments/18 }
 
+- {Only https://github.com/decred/dcrtimegui/pull/153 - worth mentioning?}
 
 ### Documentation
 
