--- a/journal/202303.md
+++ b/journal/202303.md
@@ -279,7 +279,7 @@ _[dcrdevdocs](https://github.com/decred/dcrdevdocs) is the source code for Decre
 
 { _Check_ https://github.com/decred/dcrdevdocs/commits/master }
 
-- {}
+- Now uses [mkdocs-material 9.](https://github.com/decred/dcrdevdocs/pull/108)
 
 
 ### decred.org
