--- a/journal/202303.md
+++ b/journal/202303.md
@@ -559,7 +559,7 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Markets
 
-In March DCR was trading between USDT {n.nn}-{n.nn} and BTC { five decimals }-{ five decimals }. The average daily rate was ${n.nn}.
+In March DCR was trading between USDT 17.53-25.90 and BTC 0.00068-0.00102. The average daily rate was $20.69.
 
 { _Optional: Markets overview, USD and BTC price trends, highs and lows, interesting events, interesting analysis. Check here:_
 
