--- a/journal/202303.md
+++ b/journal/202303.md
@@ -535,7 +535,14 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 { _Add links to text posts on DM when available for the videos_ }
 
-- {}
+- [Timestamply Tutorial Demonstration - Decred Time stamping](https://www.decredmagazine.com/timestamply-tutorial/) by @phoenixgreen
+- [DCRDEX 0.6 is coming - Multi-chain wallets, Market Maker bots, Digibyte support & More](https://www.decredmagazine.com/dcrdex-0-6-is-coming/) by @phoenixgreen
+- [Timestamply - Redesign for timestamping digital existence](https://www.decredmagazine.com/timestamply-redesign-for-timestamping-digital-existence/) by @phoenixgreen 
+- [Accounts in Decrediton — Money Evolved](https://www.decredmagazine.com/accounts-in-decrediton/) by @phoenixgreen
+
+Livestream:
+
+- [State of the market - Content and Development Proposals for Decred Feat. Cointelegraph](https://www.decredmagazine.com/state-of-the-market-content-and-development-proposals/) by @phoenixgreen and @Exitus
 
 **Audio:**
 
