Dev vspd regroup to highlight reuse by other apps

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -115,10 +115,15 @@ _[vspd](https://github.com/decred/vspd) is server software for running a Voting 
 
 { _Check_ https://github.com/decred/vspd/commits/master }
 
-- Added a [rate limit](https://github.com/decred/vspd/pull/373) of 3 requests per second for admin login in the webAPI. { _nit, I think webAPI is not a term_ }
+Changes to make vspd code easier to consume by other software (such as dcrwallet):
+
 - Hard-coded the [client validation function](https://github.com/decred/vspd/pull/372) and added extra testing. { _can add a few words on what validation we refer to here_ }
 - The ['ErrorResponse' type](https://github.com/decred/vspd/pull/374) now uses 'ErrorCode', removing the burden of type conversion from calling code. { _reword to not use ErrorResponse and ErrorCode - we generally avoid code names. Also, this may seem like boring refactoring but "calling code" here refers to consumers beyond this repository, which is exciting because it welcomes more features being built on top of this VSP client_ }
 - Client now uses [types 2.0.0.](https://github.com/decred/vspd/pull/375) { _reads like too dev-vy internal change, drop_ }
+
+Other changes:
+
+- Added a [rate limit](https://github.com/decred/vspd/pull/373) of 3 requests per second for admin login in the webAPI. { _nit, I think webAPI is not a term_ }
 - Added a new [executable](https://github.com/decred/vspd/pull/366) called v3tool. This is a developer testing tool which hits endpoints of the vspd API.
 
 
