Dev drop some hints, add DEX image draft

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -75,7 +75,7 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 
 Hardening of consensus change voting code continued from [last month](202302.md#dcrd):
 
-- Enhanced startup [validation](https://github.com/decred/dcrd/pull/3068) of deployment parameters to ensure they satisfy the assumptions that the vote tallying logic rely on. For example, it checks that each vote has exactly one Abstain and one No choice, that there are no duplicate vote choices, or that choices are properly encoded in bits. This may unlock future optimizations and simplifications of code related to vote tallying. { _curious how extra validation allows to optimize and simplify vote tallying_ }
+- Enhanced startup [validation](https://github.com/decred/dcrd/pull/3068) of deployment parameters to ensure they satisfy the assumptions that the vote tallying logic rely on. For example, it checks that each vote has exactly one Abstain and one No choice, that there are no duplicate vote choices, or that choices are properly encoded in bits. This may unlock future optimizations and simplifications of code related to vote tallying. { _very optional - comment on how validation allows to optimize vote tallying_ }
 - Added validation to ensure consensus change vote parameters [don't use special bits](https://github.com/decred/dcrd/pull/3073) reserved for approving or disapproving the previous block.
 - Added validation to ensure that bits used by different votes in the same voting batch [do not overlap](https://github.com/decred/dcrd/pull/3077).
 - Added validation rejecting vote choices with [empty IDs](https://github.com/decred/dcrd/pull/3079) (IDs are short strings summarizing what the vote choice means, they are normally `"yes"`, `"no"` or `"abstain"`).
@@ -87,7 +87,7 @@ Other changes:
 
 - Re-request blocks and transactions [sooner](https://github.com/decred/dcrd/pull/3067) if the peer which was queried for them disconnects. Instead of waiting for this data to be announced again later, it will be requested immediately from peers that are known to have it.
 - Fixed caching of other peers' [known inventory](https://github.com/decred/dcrd/pull/3074). { _was it a bug? what did it cause? did it affect any release?_ }
-- Refactoring { 3071 3072 } and [build config](https://github.com/decred/dcrd/pull/3081) updates.
+- Refactoring { 3071 3072 - drop after review } and [build config](https://github.com/decred/dcrd/pull/3081) updates.
 
 
 ### dcrwallet
@@ -112,8 +112,6 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 ### vspd
 
 _[vspd](https://github.com/decred/vspd) is server software for running a Voting Service Provider. A VSP votes on behalf of its users 24/7 and cannot steal funds._
-
-{ _Check_ https://github.com/decred/vspd/commits/master }
 
 Changes to make vspd code easier to consume by other software (such as dcrwallet):
 
@@ -226,7 +224,13 @@ Other stuff:
 - DCRDEX was [rejected](https://github.com/getumbrel/umbrel-apps/pull/430#issuecomment-1452436145) in the official Umbrel App Store becase "for crypto-related apps, we're exclusively accepting apps that solely focus on bitcoin". Two weeks later they [tweeted](https://twitter.com/umbrel/status/1636068336101621760) that censoring developers is anti-free market, which was somewhat surprizing in context of the rejection. DCRDEX can still be used in Umbrel via the Community App Store feature by adding DEX [repository](https://github.com/decred/umbrel-app-store) and installing from there. The difference is it requires more manual steps and exposes DCRDEX to fewer users.
 - First mainnet swaps with DigiByte (DGB) have been [spotted](https://twitter.com/DigiByteCoin/status/1640820963532214273) on Twitter.
 
-{ image candidates: maybe https://github.com/decred/dcrdex/pull/2200#issuecomment-1470833190 - but say it is WIP }
+![](https://user-images.githubusercontent.com/9373513/225440857-28d2986c-418e-47cb-a000-cefa00fd5021.png) { _upload_ }
+
+![](https://user-images.githubusercontent.com/9373513/225440866-8a727ad5-54fa-4ae4-bdb2-b88100eb4a9e.png) { _upload_ }
+
+![](https://user-images.githubusercontent.com/9373513/225440880-34c1de8f-f075-4a10-a369-04b21bd15816.png) { _upload_ }
+
+_Image: UI updates in DCRDEX to replace registration fees with time-locked bonds. UI design is a work in progress._
 
 
 ### dcrdata
@@ -241,21 +245,12 @@ _[dcrdata](https://github.com/decred/dcrdata) is an explorer for Decred blockcha
 
 _[Timestamply](https://github.com/decred/dcrtimegui) is a free service for timestamping files powered by Decred blockchain. A timestamp proves that a certain file has existed at a certain moment of time. This has a range of applications in protecting data integrity._
 
-{ _Check these repos:_
-
-- https://github.com/decred/dcrtime
-- https://github.com/decred/dcrtimegui
-
-}
-
 - { check if anything new in: https://proposals.decred.org/record/855a506/comments/18 }
 
 
 ### Documentation
 
 _[dcrdocs](https://github.com/decred/dcrdocs) is the source code for Decred [user documentation](https://docs.decred.org/)._
-
-{ _Check_ https://github.com/decred/dcrdocs/commits/master }
 
 - Added [syntax highlighting](https://github.com/decred/dcrdocs/pull/1219) to fix issues with hard to read code syntax, particularly in dark mode.
 - Updated [PoS reward](https://github.com/decred/dcrdocs/pull/1220) numbers (30% to 80%) in the proof-of-stake [Overview page](https://docs.decred.org/proof-of-stake/overview/).
@@ -271,16 +266,12 @@ _[dcrdocs](https://github.com/decred/dcrdocs) is the source code for Decred [use
 
 _[dcrdevdocs](https://github.com/decred/dcrdevdocs) is the source code for Decred [developer documentation](https://devdocs.decred.org/)._
 
-{ _Check_ https://github.com/decred/dcrdevdocs/commits/master }
-
 - Upgraded to [MkDocs Material 9](https://github.com/decred/dcrdevdocs/pull/108) with improved search. Also upgraded to Python 3.11, Nginx 1.22, and optimized the Docker build.
 
 
 ### decred.org
 
 _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.org](https://decred.org/) website._
-
-{ _Check_ https://github.com/decred/dcrweb/commits/master }
 
 Changes to the [News page](https://github.com/decred/dcrweb/pull/1106):
 
@@ -345,7 +336,7 @@ Other changes in v0.1.6:
 Other stuff:
 
 - Image attachments are now delivered between Bison Relay and Matrix in both directions.
-- Prepaid invites are coming soon https://twitter.com/behindtext/status/1641080004778897408 { Mar or Apr? }
+- Prepaid invites are coming soon https://twitter.com/behindtext/status/1641080004778897408 https://github.com/decred/dcrlnd/pull/178 { Mar or Apr? }
 
 
 ### Other
