Dev add a few Other items

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -342,18 +342,8 @@ Other stuff:
 
 ### Other
 
-- { _Smaller/common things go here._ }
-
-{ _Check for new/updated repos in:_
-
-- https://github.com/orgs/decred/repositories
-- https://github.com/orgs/companyzero/repositories
-- https://github.com/orgs/planetdecred/repositories
-- https://github.com/orgs/raedahgroup/repositories
-
-}
-
-{ _More exotic dev sources:_ https://github.com/xaur/decred-news/blob/docs/sources.md#development }
+- Decred Bug Bounty [website](https://bounty.decred.org/): added [email templates](https://github.com/decred/dcrbounty/pull/95), optimized [Docker builds](https://github.com/decred/dcrbounty/pull/96), and [added](https://github.com/decred/dcrbounty/pull/94) Tanvir0x1 to Hall of Fame.
+- Multiple websites updated to use latest Hugo site generator.
 
 
 ## People
