Dev undo accidental Dev undo made in PR update

--- a/journal/202303.md
+++ b/journal/202303.md
@@ -293,38 +293,38 @@ End user binaries have been released for Bison Relay v0.1.5 with all changes and
 Common changes in GUI and CLI apps in v0.1.6:
 
 - Improved error handling and logging of [failed payments](https://github.com/companyzero/bisonrelay/pull/156) (such as tipping).
-- Introduced [new version of group chats](https://github.com/companyzero/bisonrelay/pull/155) supporting multiple admins. Admins can invite or remove members, and assign or revoke admin privileges. Only the owner can kill the group chat. Existing group chats will have an option to upgrade to new version.
-- Improved help text for [adding receive capacity](https://github.com/companyzero/bisonrelay/pull/166).
-- Disallow comments in [relayed posts](https://github.com/companyzero/bisonrelay/pull/162). Commenting on posts will require a key exchange with the original author. Also, once the original post is received from the author, all relayed copies will be removed.
+- Implemented [new version of group chats](https://github.com/companyzero/bisonrelay/pull/155) that introduces support for multiple admins. Admins can invite or remove members, and assign or revoke admin privileges. The permission to kill the group chat is still only possible by the special Owner role. Existing group chats will have an option to upgrade to new version.
+- Improved help text for [adding LN receive capacity](https://github.com/companyzero/bisonrelay/pull/166).
+- Disallow comments on [relayed posts](https://github.com/companyzero/bisonrelay/pull/162). Commenting on posts will require a key exchange with the original author. Also, once the original post is received from the author, all relayed copies will be removed in favor of the original.
 - Fixed bug preventing to accept [multiple group chat invites](https://github.com/companyzero/bisonrelay/pull/154) at the same time.
-- Dependency updates { 165 171 175 180 }
-- Internal refactoring { 188 }
+- Dependency updates. { 165 171 175 180 }
+- Internal refactoring. { 188 }
 
 GUI app changes in v0.1.6:
 
 - Added sidebar notification icon for [new chat messages](https://github.com/companyzero/bisonrelay/pull/157).
 - Show [unread count](https://github.com/companyzero/bisonrelay/pull/157) as "1k+" when it is over 1,000.
-- Avoid redundant [last read](https://github.com/companyzero/bisonrelay/pull/157) indicator when there are no previous messages in the chat.
+- Avoid redundant [last read indicator](https://github.com/companyzero/bisonrelay/pull/157) when there are no previous messages in the chat.
 - Added a prominent [New Post](https://github.com/companyzero/bisonrelay/pull/159) button that is easy to access from different views.
 - Added [highlighting of messages](https://github.com/companyzero/bisonrelay/pull/164) that include user's nick.
 - Added [seed verification step](https://github.com/companyzero/bisonrelay/pull/174) where user is required to answer questions about their seed.
 - Allow to copy LN node [pubkey and channel points](https://github.com/companyzero/bisonrelay/pull/167) to clipboard. { _may group_ }
 - Added [About page](https://github.com/companyzero/bisonrelay/pull/175) with app version and copyright info.
-- UI alignment tweaks { 157 }
+- UI alignment tweaks. { 157 }
 - Fixed segfault error [on close](https://github.com/companyzero/bisonrelay/pull/157).
 - Fixed errors when [leaving or killing](https://github.com/companyzero/bisonrelay/pull/170) group chats. { _group_ }
-- Fixed attempt to create a leter-based avatar when [nickname is empty](https://github.com/companyzero/bisonrelay/pull/183). { _group_ }
+- Fixed attempt to generate an avatar based on nick name's first letter when [nick is empty](https://github.com/companyzero/bisonrelay/pull/183). { _group_ }
 
 CLI app changes in v0.1.6:
 
-- Added [autocompletion](https://github.com/companyzero/bisonrelay/pull/163) to various commands involving user names and group chat names.
+- Added [autocompletion](https://github.com/companyzero/bisonrelay/pull/163) of user names and group chat names to various commands.
 - Added [Alt+V](https://github.com/companyzero/bisonrelay/pull/153) as a Paste hotkey.
 - Added a command to decode and inspect [LN invoices](https://github.com/companyzero/bisonrelay/pull/166), improved logging of LN events (such as channel opened or closed).
 - Display invite to group chat in a [private chat](https://github.com/companyzero/bisonrelay/pull/169) with the inviting user.
 - Added an option to include a [group chat invite](https://github.com/companyzero/bisonrelay/pull/178) in an invite file. Invite recipient will be invited to group chat automatically after completing the initial key exchange with invite author.
 - Fixed [wrapping](https://github.com/companyzero/bisonrelay/pull/153) of multi-line text.
 
-`clientrpc` automation API changes in v0.1.6:
+`clientrpc` [automation API](https://github.com/companyzero/bisonrelay/tree/master/clientrpc) changes in v0.1.6:
 
 - Improved [cancellation and shutdown](https://github.com/companyzero/bisonrelay/issues/158) handling of the read loop.
 - Added methods for [managing group chats](https://github.com/companyzero/bisonrelay/pull/161) and [sending files](https://github.com/companyzero/bisonrelay/pull/179).
@@ -337,23 +337,13 @@ Other changes in v0.1.6:
 Other stuff:
 
 - Image attachments are now delivered between Bison Relay and Matrix in both directions.
-- Prepaid invites are coming soon https://twitter.com/behindtext/status/1641080004778897408 https://github.com/decred/dcrlnd/pull/178 { Mar or Apr? }
+- Prepaid invites have been [announced](https://twitter.com/behindtext/status/1641080004778897408), they will help to further optimize onboarding of new users.
 
 
 ### Other
 
-- { _Smaller/common things go here._ }
-
-{ _Check for new/updated repos in:_
-
-- https://github.com/orgs/decred/repositories
-- https://github.com/orgs/companyzero/repositories
-- https://github.com/orgs/planetdecred/repositories
-- https://github.com/orgs/raedahgroup/repositories
-
-}
-
-{ _More exotic dev sources:_ https://github.com/xaur/decred-news/blob/docs/sources.md#development }
+- Decred Bug Bounty [website](https://bounty.decred.org/): added [email templates](https://github.com/decred/dcrbounty/pull/95), optimized [Docker builds](https://github.com/decred/dcrbounty/pull/96), and [added](https://github.com/decred/dcrbounty/pull/94) Tanvir0x1 to Hall of Fame.
+- Multiple websites updated to use latest Hugo site generator.
 
 
 ## People
