--- a/journal/202303.md
+++ b/journal/202303.md
@@ -458,14 +458,14 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 { _Summarize outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending our message out". Here is the "big picture" stuff while Events and Media go into the details._ }
 
-Monde PR’s achievements: 
+Monde PR's achievements: 
 
 - Pitched 2 commentary opportunities 
 - Pitched 8 media opportunities 
 
 Secured the following media placements:
 
-- An article in [Cointelegraph](https://cointelegraph.com/news/trezor-crypto-wallet-s-move-into-the-semiconductor-business-isn-t-for-everyone) featuring commentary from @jz on Trezor crypto wallet’s move into the semiconductor business. The article was syndicated to 14 publications including [Ethereum Today](https://www.ethereum.today/trezor-crypto-wallets-move-into-the-semiconductor-business-isnt-for-everyone/) and [Bitcoin Insider](https://www.bitcoininsider.org/article/207994/trezor-crypto-wallets-move-semiconductor-business-isnt-everyone). 
+- An article in [Cointelegraph](https://cointelegraph.com/news/trezor-crypto-wallet-s-move-into-the-semiconductor-business-isn-t-for-everyone) featuring commentary from @jz on Trezor crypto wallet's move into the semiconductor business. The article was syndicated to 14 publications including [Ethereum Today](https://www.ethereum.today/trezor-crypto-wallets-move-into-the-semiconductor-business-isnt-for-everyone/) and [Bitcoin Insider](https://www.bitcoininsider.org/article/207994/trezor-crypto-wallets-move-semiconductor-business-isnt-everyone). 
 - An article in [CoinDesk](https://www.coindesk.com/markets/2023/03/16/crypto-observers-believe-us-banking-crisis-could-strengthen-crypto-ecosystem-in-the-long-term/) featuring commentary from @jz on the long term effects of the U.S. banking crisis on crypto. The article was syndicated to three publications including [Yahoo! Finance](https://finance.yahoo.com/news/crypto-observers-believe-u-banking-113017805.html) and [Markets Insider](https://markets.businessinsider.com/news/currencies/crypto-observers-believe-us-banking-crisis-could-strengthen-crypto-ecosystem-in-the-long-term-1032172484). 
 
 
@@ -515,7 +515,7 @@ Secured the following media placements:
 - [Timestamply Tutorial Demonstration - Decred Time stamping](https://www.decredmagazine.com/timestamply-tutorial/) by @phoenixgreen
 - [DCRDEX 0.6 is coming - Multi-chain wallets, Market Maker bots, Digibyte support & More](https://www.decredmagazine.com/dcrdex-0-6-is-coming/) by @phoenixgreen
 - [Timestamply - Redesign for timestamping digital existence](https://www.decredmagazine.com/timestamply-redesign-for-timestamping-digital-existence/) by @phoenixgreen 
-- [Accounts in Decrediton — Money Evolved](https://www.decredmagazine.com/accounts-in-decrediton/) by @phoenixgreen
+- [Accounts in Decrediton - Money Evolved](https://www.decredmagazine.com/accounts-in-decrediton/) by @phoenixgreen
 
 Livestream:
 
@@ -578,7 +578,7 @@ In March DCR was trading between USDT 17.53-25.90 and BTC 0.00068-0.00102. The a
 
 SVB and banking fallout?
 
-Binance has been [charged](https://decrypt.co/124800/binance-cftc-lawsuit-crypto) by the CFTC in a wide ranging complaint which covers a number of offences, including weak KYC/AML that allowed US customers to trade derivatives and securities which they were not registered to offer, allowed money laundering to occur, and traded against their own customers. The 74 page [complaint](https://www.docdroid.net/60YAbCz/cftc-binance-pdf) includes quotes from messages sent between internal staff, including such gems as "“I HAZ NO CONFIDENCE IN OUR GEOFENCING", from the money laundering reporting officer. The complaint also mentions Bitcoin and Ethereum as commodities, in service to defining Binance's activities as subject to CFTC's jurisdiction.
+Binance has been [charged](https://decrypt.co/124800/binance-cftc-lawsuit-crypto) by the CFTC in a wide ranging complaint which covers a number of offences, including weak KYC/AML that allowed US customers to trade derivatives and securities which they were not registered to offer, allowed money laundering to occur, and traded against their own customers. The 74 page [complaint](https://www.docdroid.net/60YAbCz/cftc-binance-pdf) includes quotes from messages sent between internal staff, including such gems as "I HAZ NO CONFIDENCE IN OUR GEOFENCING", from the money laundering reporting officer. The complaint also mentions Bitcoin and Ethereum as commodities, in service to defining Binance's activities as subject to CFTC's jurisdiction.
 
 https://www.reuters.com/legal/sec-sues-justin-sun-others-over-illegal-crypto-sales-2023-03-22/
 
